<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_demoApp"
            android:icon="@drawable/demo"
            android:title="@string/menu_my_demo" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/shopping_bag2"
            android:title="@string/menu_my_orders" />
        <item
            android:id="@+id/nav_my_rewards"
            android:icon="@drawable/gift"
            android:title="@string/menu_my_rewards" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/shopping_cart"
            android:title="@string/menu_my_cart" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@drawable/heart"
            android:title="@string/menu_my_wishlist" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/user2"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/booking"
            android:title="@string/menu_my_booking" />
    </group>
    <item
        android:id="@+id/nav_signOut"
        android:icon="@drawable/sigout"
        android:title="@string/menu_my_signOut" />

</menu>
